// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`children - это не только ценный актив, но и три - четыре... Ну, и другие числа 1`] = `
.c1 {
  visibility: hidden;
  width: 0;
  height: 0;
  white-space: nowrap;
  overflow: hidden;
}

.c0 {
  white-space: nowrap;
  width: 100%;
  overflow: hidden;
}

.c0.react-tail-text_tailed::after {
  content: "4";
}

.c2 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 100%;
  vertical-align: top;
}

.c2.react-tail-text__fulltext_selected {
  background: yellow;
}

<div
  className="react-tail-text c0"
  onDoubleClick={[Function]}
>
  <div
    className="c1 react-tail-text__tail"
  >
    4
  </div>
  <div
    className="c2 react-tail-text__fulltext"
  >
    34
  </div>
</div>
`;

exports[`it is alive 1`] = `
.c1 {
  visibility: hidden;
  width: 0;
  height: 0;
  white-space: nowrap;
  overflow: hidden;
}

.c0 {
  white-space: nowrap;
  width: 100%;
  overflow: hidden;
}

.c0.react-tail-text_tailed::after {
  content: "ive";
}

.c2 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 100%;
  vertical-align: top;
}

.c2.react-tail-text__fulltext_selected {
  background: yellow;
}

<div
  className="react-tail-text c0"
  onDoubleClick={[Function]}
>
  <div
    className="c1 react-tail-text__tail"
  >
    ive
  </div>
  <div
    className="c2 react-tail-text__fulltext"
  >
    it is alive
  </div>
</div>
`;

exports[`it is alive 2`] = `
.c1 {
  visibility: hidden;
  width: 0;
  height: 0;
  white-space: nowrap;
  overflow: hidden;
}

.c0 {
  white-space: nowrap;
  width: 100%;
  overflow: hidden;
}

.c0.react-tail-text_tailed::after {
  content: "т";
}

.c2 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 100%;
  vertical-align: top;
}

.c2.react-tail-text__fulltext_selected {
  background: yellow;
}

<div
  className="react-tail-text c0"
  onDoubleClick={[Function]}
>
  <div
    className="c1 react-tail-text__tail"
  >
    т
  </div>
  <div
    className="c2 react-tail-text__fulltext"
  >
    да будет свет
  </div>
</div>
`;

exports[`Выводится предупреждение о некорректном параметре teilLength 1`] = `
.c1 {
  visibility: hidden;
  width: 0;
  height: 0;
  white-space: nowrap;
  overflow: hidden;
}

.c0 {
  white-space: nowrap;
  width: 100%;
  overflow: hidden;
}

.c0.react-tail-text_tailed::after {
  content: "Краткость - сестра таланта";
}

.c2 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 100%;
  vertical-align: top;
}

.c2.react-tail-text__fulltext_selected {
  background: yellow;
}

<div
  className="react-tail-text c0"
  onDoubleClick={[Function]}
>
  <div
    className="c1 react-tail-text__tail"
  >
    Краткость - сестра таланта
  </div>
  <div
    className="c2 react-tail-text__fulltext"
  >
    Краткость - сестра таланта
  </div>
</div>
`;

exports[`Кастомный className добавляется к элементу 1`] = `
.c1 {
  visibility: hidden;
  width: 0;
  height: 0;
  white-space: nowrap;
  overflow: hidden;
}

.c0 {
  white-space: nowrap;
  width: 100%;
  overflow: hidden;
}

.c0.react-tail-text_tailed::after {
  content: "ьзя";
}

.c2 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 100%;
  vertical-align: top;
}

.c2.react-tail-text__fulltext_selected {
  background: yellow;
}

<div
  className="react-tail-text c0 hello"
  onDoubleClick={[Function]}
>
  <div
    className="c1 react-tail-text__tail"
  >
    ьзя
  </div>
  <div
    className="c2 react-tail-text__fulltext"
  >
    Модифицировать вшитые классы пока нельзя
  </div>
</div>
`;

exports[`Текст подскази при наведении добавлен в атрибут title 1`] = `
.c1 {
  visibility: hidden;
  width: 0;
  height: 0;
  white-space: nowrap;
  overflow: hidden;
}

.c0 {
  white-space: nowrap;
  width: 100%;
  overflow: hidden;
}

.c0.react-tail-text_tailed::after {
  content: "tle";
}

.c2 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 100%;
  vertical-align: top;
}

.c2.react-tail-text__fulltext_selected {
  background: yellow;
}

<div
  className="react-tail-text c0"
  onDoubleClick={[Function]}
  title="А вот и сама подсказка"
>
  <div
    className="c1 react-tail-text__tail"
  >
    tle
  </div>
  <div
    className="c2 react-tail-text__fulltext"
  >
    Подсказка при наведении добавлена к wrapper элементу в тег title
  </div>
</div>
`;
